--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "vitest": "^1.1.1"
     },
     "dependencies": {
+        "@cloudinary/url-gen": "^1.19.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
     }
